gave leftbar fixed position and independent scrolling (sticky) and moved navbar to top of z-index

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,11 +1,12 @@
 .navbarContainer {
     height: 50px;
     width: 100%;
-    background-color:rgb(121, 129, 241);
+    background-color:darkseagreen;
     display: flex;
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 999;
 }
 
 .navbarLeft {
